【視覺優化】 UIUX優化

--- a/category_Study123.html
+++ b/category_Study123.html
@@ -22,10 +22,10 @@
 <body>
     <div class="title-bar">
         <a href="./index.html"><i class='bx bx-arrow-back'></i></a>
-        <h3 class="page-title">關於學習王NAS的一切設定跟安裝</h3>
+        <h3 class="page-title">學習王設定流程</h3>
     </div>
     <div class="conponent" id="step1">
-        <div class="title">Step 1 請前往機房請確認您的電力狀態以及插座是否穩妥 ( 確認正常可跳過 )</div>
+        <div class="title">Step 1 確認電力 - 請前往機房請確認您的電力狀態以及插座是否穩妥(已正常可跳過)</div>
         <div class="ntroduce">您可以確認當前區域的目前供電狀態以及停電公告<a class="ntroduce-link"
                 href="https://nds.taipower.com.tw/ndsWeb/ndft112.aspx" target="_blank">台灣電力公司供電查詢</a>
         </div>
@@ -34,7 +34,7 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step2">
-        <div class="title">Step 2 按下主機開機鍵並等待10秒正常開機</span></div>
+        <div class="title">Step 2 NAS開機 - 按下主機開機鍵並等待10秒正常開機</span></div>
         <div class="ntroduce">確認disk燈號以及lan網孔的燈號皆呈現綠色閃爍</div>
         <div class="imgItems">
             <div class="img-item">
@@ -60,7 +60,7 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step3">
-        <div class="title">Step 3 查詢IP & 容器開關</span></div>
+        <div class="title">Step 3 開啟容器 - 查詢館內IP&容器開關</span></div>
         <div class="ntroduce">請先下載 " IP找尋助手 "<a class="ntroduce-link"
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
                 target="_blank">IP找尋助手 ( Synology Assistant_檔案大小: 10.2MB ) 下載</a></div>
@@ -95,7 +95,7 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step4">
-        <div class="title">Step 4 安裝/重裝軟體</span></div>
+        <div class="title">Step 4 萬試通軟體 - 安裝/重裝軟體</span></div>
         <div class="ntroduce" style="margin: auto; text-align: center; font-weight: bold;">
             " 若是場館有隨身碟，可以直接複製正常電腦的study123資料夾到異常的電腦，這樣是最快速方便的方式 "</div>
         <div class="ntroduce">請先下載 " Study123原始檔案 壓縮包 "<a class="ntroduce-link" href="https://reurl.cc/X5x69e"
@@ -148,7 +148,7 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step5">
-        <div class="title">Step 5 補教系統 新增/檢視 學員帳號</span>
+        <div class="title">Step 5 補教系統 - 新增/檢視 學員帳號</span>
         </div>
         <div class="ntroduce">請您先依照Step3確認您的NAS IP ( 若已經知道您的IP即可略過確認IP的步驟 ) <a class="ntroduce-link" href="#step3">Step3
                 確認您的 Study123 NAS IP</a>
@@ -199,7 +199,6 @@
 
 
     <div class="conponent" id="overlist01">
-        <div class="title">其他: 停電前的NAS關機</span></div>
         <div class="ntroduce">避免資料庫中途因斷電導致損毀</div>
         <div class="ntroduce">請先下載 " IP找尋助手 "<a class="ntroduce-link"
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
@@ -240,7 +239,9 @@
         </div>
     </div>
     <footer>
-        <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
+        <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved.
+            <br>Design By Eduone MIS
+        </p>
     </footer>
 </body>
 
