--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
     </div>
   </div>
   <footer>
-    <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
+    <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved.
+      <br>Design By Eduone MIS
+    </p>
   </footer>
 </body>
 
