--- a/assistant.html
+++ b/assistant.html
@@ -52,7 +52,9 @@
             </div>
         </div>
         <footer>
-            <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
+            <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved.
+                <br>Design By Eduone MIS
+            </p>
         </footer>
     </div>
 
