【視覺優化】 UIUX優化

--- a/category_Study123.html
+++ b/category_Study123.html
@@ -88,6 +88,10 @@
                     <li>登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)</li>
                     <li>進入docker>容器>開啟名為hls-ubuntu容器</li>
                 </ol>
+                <br>
+                <span style="font-weight: bold; font-size: 17px;">
+                    特別注意：因為synology公司NAS系統更新的關係，有可能您的docker會改為Container Manager
+                </span>
             </div>
         </div>
     </div>
@@ -129,6 +133,13 @@
                     <li>將您NAS的IP輸入影片中的範圍</li>
                     <li>儲存並離開config.txt</li>
                 </ol>
+                <br>
+                <span style="font-weight: bold; font-size: 17px;">
+                    特別注意：您的NAS IP 為您在
+                    <a href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
+                        target="_blank" style="color:#0f4c81; border-bottom: 2px solid #0f4c81;">IP查詢助手</a>
+                    查詢到的數字，並非教學中的192.168.0.9
+                </span>
             </div>
 
             <div class="img-item">
@@ -175,7 +186,11 @@
                     <li>滾輪滑至右面最底部，找到「新增學生帳號」並點擊</li>
                     <li>所有欄位皆須填入相應要求的內容</li>
                     <li>「行動電話」為您登入萬試通的密碼，請勿輸入超過10位數字 ( 建議您使用十個 1 )</li>
-                </ol><br>特別注意:「生日」欄位預設值1994 5 15不代表已填入，您需要再次填入您自己設定的生日
+                </ol><br>
+                <span style="font-weight: bold; font-size: 17px;">
+                    特別注意：「生日」欄位預設值1994 5
+                    15不代表已填入，您需要再次填入您自己設定的生日
+                </span>
             </div>
 
             <div class="img-item">
@@ -225,6 +240,10 @@
                     <li>進入docker>容器>關閉名為hls-ubuntu容器</li>
                     <li>確保名為hls-ubuntu容器開關呈現灰色</li>
                 </ol>
+                <br>
+                <span style="font-weight: bold; font-size: 17px;">
+                    特別注意：因為synology公司NAS系統更新的關係，有可能您的docker會改為Container Manager
+                </span>
             </div>
             <div class="img-item">
                 <p><img src="./media/關機.webp">
@@ -240,7 +259,7 @@
     </div>
     <footer>
         <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved.
-            <br>Design By Eduone MIS
+            <br>Design By EduOne MIS | Powered By Github
         </p>
     </footer>
 </body>
