--- a/assistant.html
+++ b/assistant.html
@@ -53,7 +53,7 @@
         </div>
         <footer>
             <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved.
-                <br>Design By Eduone MIS
+                <br>Design By EduOne MIS | Powered By Github
             </p>
         </footer>
     </div>
