【系統命名異動】 修正imAssistantApp.js為assistantApp.js

--- a/assistant.html
+++ b/assistant.html
@@ -65,6 +65,6 @@
 <!-- css -->
 <link rel="stylesheet" href="./css/assistant.css">
 <!-- script -->
-<script src="./js/ImAssistantApp.js"></script>
+<script src="./js/assistantApp.js"></script>
 
 </html>
