【代碼優化】 效能優化

--- a/assistant.html
+++ b/assistant.html
@@ -39,10 +39,10 @@
                 <h2 class="title-text">您遇到什麼問題呢</h2>
             </div>
             <div class="qustion">
-                <button class="choose" id="power-failure"><i class='bx bxs-traffic-barrier'></i>
+                <button class="choose" id="checkPowerStatusBtn"><i class='bx bxs-traffic-barrier'></i>
                     <p>停電相關問題</p>
                 </button>
-                <button class="choose" id="study123-software"><i class='bx bx-log-in'></i>
+                <button class="choose" id="handleSoftwareLoginFailureBtn"><i class='bx bx-log-in'></i>
                     <p>學習王無法使用</p>
                 </button>
             </div>
