因應學習王windows更新問題 更改study123下載連結

--- a/category_Study123.html
+++ b/category_Study123.html
@@ -102,9 +102,9 @@
         <div class="title">Step 4 萬試通軟體 - 安裝/重裝軟體</span></div>
         <div class="ntroduce" style="margin: auto; text-align: center; font-weight: bold;">
             " 若是場館有隨身碟，可以直接複製正常電腦的study123資料夾到異常的電腦，這樣是最快速方便的方式 "</div>
-        <div class="ntroduce">請先下載 " Study123原始檔案 壓縮包 "<a class="ntroduce-link"
-                href="https://drive.google.com/file/d/17VhzNPZgaPptx1LA-gDBrH4yjHESfaGE/view?usp=sharing"
-                target="_blank">Study123原始檔案 壓縮包 ( Study123壓縮包_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
+        <div class="ntroduce">請先下載 " Study123暫時性解決方案 壓縮包 "<a class="ntroduce-link"
+                href="http://gofile.me/5XgKF/AIkSihiGn"
+                target="_blank">Study123暫時性解決方案 壓縮包 ( Study123暫時性解決方案_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
                 href="https://tw.bandisoft.com/bandizip/" target="_blank">免費好用的解壓縮工具 (
                 BandZip_檔案大小: 6.89MB ) 下載</a>
         </div>
