--- a/category_Study123.html
+++ b/category_Study123.html
@@ -103,7 +103,7 @@
         <div class="ntroduce" style="margin: auto; text-align: center; font-weight: bold;">
             " 若是場館有隨身碟，可以直接複製正常電腦的study123資料夾到異常的電腦，這樣是最快速方便的方式 "</div>
         <div class="ntroduce">請先下載 " Study123暫時性解決方案 壓縮包 "<a class="ntroduce-link"
-                href="http://gofile.me/5XgKF/AIkSihiGn"
+                href="http://gofile.me/5XgKF/UcclNmqZN"
                 target="_blank">Study123暫時性解決方案 壓縮包 ( Study123暫時性解決方案_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
                 href="https://tw.bandisoft.com/bandizip/" target="_blank">免費好用的解壓縮工具 (
                 BandZip_檔案大小: 6.89MB ) 下載</a>
